# third_party

./: asio-1.11.0.tar.bz2  asio-patch.7z  build.sh  libpqxx-patch.7z  libressl-patch.7z  re2-patch.7z  zlib-patch.7z
asio/: license.txt
cmake/: asio-config.cmake  boost-config.cmake  common.cmake  ice-config.cmake  libressl-config.cmake  pqxx-config.cmake  re2-config.cmake  sqlite-config.cmake  zlib-config.cmake
pqxx/include/pqxx/: compiler-public.hxx  pqxx  util.hxx
sqlite/: CMakeLists.txt  makefile  sqlite.bat
sqlite/include/: sqlite.h
sqlite/include/sqlite/: database.h  error.h  field.h  result.h  row.h  statement.h  type_traits.h  types.h
sqlite/src/sqlite/: database.cc  error.cc  field.cc  result.cc  row.cc  statement.cc
zlib/: license.txt
